--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^4.1.1",
+    "electron-pdf-window": "^1.0.12",
     "jquery": "^3.3.1",
     "macaddress": "^0.2.9"
   }
