--- a/.gitignore
+++ b/.gitignore
@@ -2149,3 +2149,45 @@ node_modules/url-to-options/index.js
 node_modules/url-to-options/package.json
 package-lock.json
 package-lock.json
+package-lock.json
+node_modules/iconv-lite/README.md
+node_modules/iconv-lite/package.json
+node_modules/iconv-lite/LICENSE
+node_modules/iconv-lite/lib/streams.js
+node_modules/iconv-lite/lib/index.js
+node_modules/iconv-lite/lib/index.d.ts
+node_modules/iconv-lite/lib/extend-node.js
+node_modules/iconv-lite/lib/bom-handling.js
+node_modules/iconv-lite/encodings/utf7.js
+node_modules/iconv-lite/encodings/utf16.js
+node_modules/iconv-lite/encodings/tables/shiftjis.json
+node_modules/iconv-lite/encodings/tables/gbk-added.json
+node_modules/iconv-lite/encodings/tables/gb18030-ranges.json
+node_modules/iconv-lite/encodings/tables/eucjp.json
+node_modules/iconv-lite/encodings/tables/cp950.json
+node_modules/iconv-lite/encodings/tables/cp949.json
+node_modules/iconv-lite/encodings/tables/cp936.json
+node_modules/iconv-lite/encodings/tables/big5-added.json
+node_modules/iconv-lite/encodings/sbcs-data.js
+node_modules/iconv-lite/encodings/sbcs-data-generated.js
+node_modules/iconv-lite/encodings/sbcs-codec.js
+node_modules/iconv-lite/encodings/internal.js
+node_modules/iconv-lite/encodings/index.js
+node_modules/iconv-lite/encodings/dbcs-data.js
+node_modules/iconv-lite/encodings/dbcs-codec.js
+node_modules/iconv-lite/Changelog.md
+node_modules/encoding/test/test.js
+node_modules/encoding/README.md
+node_modules/encoding/package.json
+node_modules/encoding/LICENSE
+node_modules/encoding/lib/iconv-loader.js
+node_modules/encoding/lib/encoding.js
+node_modules/encoding/.travis.yml
+node_modules/encoding/.npmignore
+node_modules/electron-fetch/README.md
+node_modules/electron-fetch/package.json
+node_modules/electron-fetch/LICENSE.md
+node_modules/electron-fetch/lib/index.js
+node_modules/electron-fetch/lib/index.es.js
+node_modules/electron-fetch/index.d.ts
+node_modules/electron-fetch/CHANGELOG.md
