--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^4.1.1",
-    "electron-pdf-window": "^1.0.12",
+    "electron-fetch": "^1.3.0",
     "electron-packager": "^13.1.1",
+    "electron-pdf-window": "^1.0.12",
     "jquery": "^3.3.1",
     "macaddress": "^0.2.9"
   }
