--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . bygoz  --asar --platform win32 --arch x64 --icon=icon/favicon.ico --out dist/  --overwrite"
+    "build": "electron-packager . bygoz  --asar --platform win32 --arch x64 --icon=icon/favicon.ico --out dist/  --overwrite",
+    "postinstall": "npx @pdftron/webviewer-downloader"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "electron": "^4.1.1",
-    "electron-fetch": "^1.3.0",
     "electron-packager": "^13.1.1",
-    "electron-pdf-window": "^1.0.12",
     "jquery": "^3.3.1",
-    "macaddress": "^0.2.9"
+    "macaddress": "^0.2.9",
+    "btoa": "^1.2.1",
+    "download": "^7.1.0",
+    "fs-extra": "^7.0.1",
+    "@pdftron/webviewer-downloader": "^1.0.7"
   }
 }
