--- a/.gitignore
+++ b/.gitignore
@@ -3742,3 +3742,169 @@ package-lock.json
 package-lock.json
 package-lock.json
 package-lock.json
+public/lib/webviewer.min.js
+public/lib/ui/build/webviewer-ui.min.js
+public/lib/ui/build/style.css
+public/lib/ui/build/index.html
+public/lib/ui/build/i18n/translation-zh_tw.json
+public/lib/ui/build/i18n/translation-zh_cn.json
+public/lib/ui/build/i18n/translation-ru.json
+public/lib/ui/build/i18n/translation-pt_br.json
+public/lib/ui/build/i18n/translation-nl.json
+public/lib/ui/build/i18n/translation-ko.json
+public/lib/ui/build/i18n/translation-ja.json
+public/lib/ui/build/i18n/translation-fr.json
+public/lib/ui/build/i18n/translation-es.json
+public/lib/ui/build/i18n/translation-en.json
+public/lib/ui/build/i18n/translation-de.json
+public/lib/package.json
+public/lib/core/pdf/PDFworker.js
+public/lib/core/pdf/PDFNet.js
+public/lib/core/office/WebOfficeWorkerSubzero.nmf
+public/lib/core/office/WebOfficeWorker.nmf
+public/lib/core/office/OfficeWorker.js
+public/lib/core/external/pako_inflate.min.js
+public/lib/core/external/jquery-3.2.1.min.js
+public/lib/core/external/html2canvas.min.js
+public/lib/core/external/decode.min.js
+public/lib/core/DecryptWorker.js
+public/lib/core/CoreWorker.js
+public/lib/core/CoreControls.js
+package-lock.json
+node_modules/electron-splashscreen/README.md
+node_modules/electron-splashscreen/package.json
+node_modules/electron-splashscreen/LICENSE
+node_modules/electron-splashscreen/lib/templates/simple.js.map
+node_modules/electron-splashscreen/lib/templates/simple.js
+node_modules/electron-splashscreen/lib/templates/simple.d.ts.map
+node_modules/electron-splashscreen/lib/templates/simple.d.ts
+node_modules/electron-splashscreen/lib/templates/office.js.map
+node_modules/electron-splashscreen/lib/templates/office.js
+node_modules/electron-splashscreen/lib/templates/office.d.ts.map
+node_modules/electron-splashscreen/lib/templates/office.d.ts
+node_modules/electron-splashscreen/lib/templates/dolphin.js.map
+node_modules/electron-splashscreen/lib/templates/dolphin.js
+node_modules/electron-splashscreen/lib/templates/dolphin.d.ts.map
+node_modules/electron-splashscreen/lib/templates/dolphin.d.ts
+node_modules/electron-splashscreen/lib/splash-screen.js.map
+node_modules/electron-splashscreen/lib/splash-screen.js
+node_modules/electron-splashscreen/lib/splash-screen.d.ts.map
+node_modules/electron-splashscreen/lib/splash-screen.d.ts
+node_modules/electron-splashscreen/lib/report-ready.js.map
+node_modules/electron-splashscreen/lib/report-ready.js
+node_modules/electron-splashscreen/lib/report-ready.d.ts.map
+node_modules/electron-splashscreen/lib/report-ready.d.ts
+node_modules/electron-splashscreen/lib/index.js.map
+node_modules/electron-splashscreen/lib/index.js
+node_modules/electron-splashscreen/lib/index.d.ts.map
+node_modules/electron-splashscreen/lib/index.d.ts
+node_modules/electron-splashscreen/es/templates/simple.js.map
+node_modules/electron-splashscreen/es/templates/simple.js
+node_modules/electron-splashscreen/es/templates/simple.d.ts.map
+node_modules/electron-splashscreen/es/templates/simple.d.ts
+node_modules/electron-splashscreen/es/templates/office.js.map
+node_modules/electron-splashscreen/es/templates/office.js
+node_modules/electron-splashscreen/es/templates/office.d.ts.map
+node_modules/electron-splashscreen/es/templates/office.d.ts
+node_modules/electron-splashscreen/es/templates/dolphin.js.map
+node_modules/electron-splashscreen/es/templates/dolphin.js
+node_modules/electron-splashscreen/es/templates/dolphin.d.ts.map
+node_modules/electron-splashscreen/es/templates/dolphin.d.ts
+node_modules/electron-splashscreen/es/splash-screen.js.map
+node_modules/electron-splashscreen/es/splash-screen.js
+node_modules/electron-splashscreen/es/splash-screen.d.ts.map
+node_modules/electron-splashscreen/es/splash-screen.d.ts
+node_modules/electron-splashscreen/es/report-ready.js.map
+node_modules/electron-splashscreen/es/report-ready.js
+node_modules/electron-splashscreen/es/report-ready.d.ts.map
+node_modules/electron-splashscreen/es/report-ready.d.ts
+node_modules/electron-splashscreen/es/index.js.map
+node_modules/electron-splashscreen/es/index.js
+node_modules/electron-splashscreen/es/index.d.ts.map
+node_modules/electron-splashscreen/es/index.d.ts
+node_modules/electron-splashscreen/.travis.yml
+node_modules/custom-electron-titlebar/README.md
+node_modules/custom-electron-titlebar/package.json
+node_modules/custom-electron-titlebar/LICENSE
+node_modules/custom-electron-titlebar/lib/titlebar.js
+node_modules/custom-electron-titlebar/lib/titlebar.d.ts
+node_modules/custom-electron-titlebar/lib/themebar.js
+node_modules/custom-electron-titlebar/lib/themebar.d.ts
+node_modules/custom-electron-titlebar/lib/menubar.js
+node_modules/custom-electron-titlebar/lib/menubar.d.ts
+node_modules/custom-electron-titlebar/lib/menu/menuitem.js
+node_modules/custom-electron-titlebar/lib/menu/menuitem.d.ts
+node_modules/custom-electron-titlebar/lib/menu/menu.js
+node_modules/custom-electron-titlebar/lib/menu/menu.d.ts
+node_modules/custom-electron-titlebar/lib/index.js
+node_modules/custom-electron-titlebar/lib/index.d.ts
+node_modules/custom-electron-titlebar/lib/common/platform.js
+node_modules/custom-electron-titlebar/lib/common/platform.d.ts
+node_modules/custom-electron-titlebar/lib/common/linkedList.js
+node_modules/custom-electron-titlebar/lib/common/linkedList.d.ts
+node_modules/custom-electron-titlebar/lib/common/lifecycle.js
+node_modules/custom-electron-titlebar/lib/common/lifecycle.d.ts
+node_modules/custom-electron-titlebar/lib/common/keyCodes.js
+node_modules/custom-electron-titlebar/lib/common/keyCodes.d.ts
+node_modules/custom-electron-titlebar/lib/common/iterator.js
+node_modules/custom-electron-titlebar/lib/common/iterator.d.ts
+node_modules/custom-electron-titlebar/lib/common/event.js
+node_modules/custom-electron-titlebar/lib/common/event.d.ts
+node_modules/custom-electron-titlebar/lib/common/dom.js
+node_modules/custom-electron-titlebar/lib/common/dom.d.ts
+node_modules/custom-electron-titlebar/lib/common/color.js
+node_modules/custom-electron-titlebar/lib/common/color.d.ts
+node_modules/custom-electron-titlebar/lib/common/charCode.js
+node_modules/custom-electron-titlebar/lib/common/charCode.d.ts
+node_modules/custom-electron-titlebar/lib/common/async.js
+node_modules/custom-electron-titlebar/lib/common/async.d.ts
+node_modules/custom-electron-titlebar/lib/common/arrays.js
+node_modules/custom-electron-titlebar/lib/common/arrays.d.ts
+node_modules/custom-electron-titlebar/lib/common/actions.js
+node_modules/custom-electron-titlebar/lib/common/actions.d.ts
+node_modules/custom-electron-titlebar/lib/browser/mouseEvent.js
+node_modules/custom-electron-titlebar/lib/browser/mouseEvent.d.ts
+node_modules/custom-electron-titlebar/lib/browser/keyboardEvent.js
+node_modules/custom-electron-titlebar/lib/browser/keyboardEvent.d.ts
+node_modules/custom-electron-titlebar/lib/browser/iframe.js
+node_modules/custom-electron-titlebar/lib/browser/iframe.d.ts
+node_modules/custom-electron-titlebar/lib/browser/event.js
+node_modules/custom-electron-titlebar/lib/browser/event.d.ts
+node_modules/custom-electron-titlebar/lib/browser/browser.js
+node_modules/custom-electron-titlebar/lib/browser/browser.d.ts
+node_modules/app-root-path/README.md
+node_modules/app-root-path/package.json
+node_modules/app-root-path/LICENSE
+node_modules/app-root-path/lib/resolve.js
+node_modules/app-root-path/lib/app-root-path.js
+node_modules/app-root-path/index.js
+node_modules/app-root-path/browser-shim.js
+public/lib/webviewer.min.js
+public/lib/ui/build/webviewer-ui.min.js
+public/lib/ui/build/style.css
+public/lib/ui/build/index.html
+public/lib/ui/build/i18n/translation-zh_tw.json
+public/lib/ui/build/i18n/translation-zh_cn.json
+public/lib/ui/build/i18n/translation-ru.json
+public/lib/ui/build/i18n/translation-pt_br.json
+public/lib/ui/build/i18n/translation-nl.json
+public/lib/ui/build/i18n/translation-ko.json
+public/lib/ui/build/i18n/translation-ja.json
+public/lib/ui/build/i18n/translation-fr.json
+public/lib/ui/build/i18n/translation-es.json
+public/lib/ui/build/i18n/translation-en.json
+public/lib/ui/build/i18n/translation-de.json
+public/lib/package.json
+public/lib/core/pdf/PDFworker.js
+public/lib/core/pdf/PDFNet.js
+public/lib/core/office/WebOfficeWorkerSubzero.nmf
+public/lib/core/office/WebOfficeWorker.nmf
+public/lib/core/office/OfficeWorker.js
+public/lib/core/external/pako_inflate.min.js
+public/lib/core/external/jquery-3.2.1.min.js
+public/lib/core/external/html2canvas.min.js
+public/lib/core/external/decode.min.js
+public/lib/core/DecryptWorker.js
+public/lib/core/CoreWorker.js
+public/lib/core/CoreControls.js
+package-lock.json
